Work In Progress

--- a/unchosen.html
+++ b/unchosen.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="unchosen.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
 </head>
 <body>
-    <link href="unchosen.css" rel="stylesheet" type="text/css" />
+    <div>
+        <h1><u>The UnChosen Warrior</u></h1>
+    </div>
+    <div id="destinyAwaits">
+        <form id="game">
+            <div class="text1" id="output">
+                <input type="text" name="nameInput" placeholder="Your name, UnChosen Oneunchosen?">
+                <button type="submit"> Ready to Go?</button>
+            </div>
+        </form>
+      <div id="stats"></div>
+    </div>
+   
     <script src="unchosen.js"></script>
 </body>
 </html>
