--- a/unchosen.html
+++ b/unchosen.html
@@ -14,7 +14,7 @@
     <div id="destinyAwaits">
         <form id="game">
             <div class="text1" id="output">
-                <input type="text" name="nameInput" placeholder="Your name, UnChosen Oneunchosen?">
+                <input type="text" name="nameInput" placeholder="Your name, UnChosen One?">
                 <button type="submit"> Ready to Go?</button>
             </div>
         </form>
