--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <button type="submit"> Ready to Go?</button>
             </div>
         </form>
-      <div id="stats"></div>
+      <div id="stats">
+          
+      </div>
     </div>
 
     <script src="unchosen.js"></script>
