--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>The Unchosen Warrior</title>
 </head>
 <body>
+    <header class="nav">
+        <div class="center_right">
+            <button onclick="window.location.reload();">
+            <span class="start-over-outlined"> refresh </span> ==$0
+            </button>
+        </div>
     <div>
         <h1><u>The UnChosen Warrior</u></h1>
-    </div>
-    <div id="destinyAwaits">
-        <form id="game">
-            <div class="text1" id="output">
-                <input type="text" name="nameInput" placeholder="Your name, UnChosen One?">
-                <button type="submit"> Ready to Go?</button>
-            </div>
-        </form>
-      <div id="stats">
-          
-      </div>
-    </div>
+        <h3>By: Brandon Lu and Alex Hernandez</h3>
+          </div>
+        </div>
 
+    <div class=""
+    </div>
+    </header>
     <script src="unchosen.js"></script>
 </body>
 </html>
