--- a/index.html
+++ b/index.html
@@ -5,23 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="unchosen.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>The Unchosen Warrior</title>
 </head>
 <body>
     <header class="nav">
         <div class="center_right">
-            <button onclick="window.location.reload();">
-            <span class="start-over-outlined"> refresh </span> ==$0
+            <button id="reload">
+                <span class="material-symbols-outlined">
+                    refresh
+                    </span>
             </button>
         </div>
     <div>
         <h1><u>The UnChosen Warrior</u></h1>
         <h3>By: Brandon Lu and Alex Hernandez</h3>
           </div>
-        </div>
-
-    <div class=""
+        <button id="BeginJourney"> Begin Journey</button>
     </div>
+    
+    
+    <div id="playArea">
+
+    </div>
+
+    <div id="buttonArea">
+
+    </div>
+
     </header>
     <script src="unchosen.js"></script>
 </body>
