--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </span>
             </button>
         </div>
-    <div>
+    <div id="credits-title-main">
         <h1><u>The UnChosen Warrior</u></h1>
         <h3>By: Brandon Lu and Alex Hernandez</h3>
           </div>
